# jarvis-assistant-main

./: .env.example  .flake8  Dockerfile  README.md  SECRETS_README.md  cleanup_imports.py  config.py  docker-compose.yml  generate_secrets.py  main.py  pyproject.toml  requirements-extended.txt  requirements.txt  setup.py  setup_github_secrets.py
.github/workflows/: azure-deploy.yml  ci.yml
admin/: package-lock.json  package.json
admin/src/: payload.config.ts  server.ts
admin/src/collections/: Agents.ts  Knowledge.ts  SystemMetrics.ts  Tasks.ts  Users.ts
agents/: __init__.py  admin_agent.py  agent_manager.py  autogen_integration.py  base_agent.py  database_executor.py  file_executor.py  language_executor.py  ml_executor.py  models.py  network_executor.py  scheduler.py  system_executor.py  task_dag.py  task_executor.py
ai/: ai_services.py
api/: openapi.py
auth/: api_management.py  openid_config.py
backend/: websocket_server.py
browser-extension/: manifest.json
browser-extension/src/: background.ts  content.ts
browser-extension/src/features/: task-executor.ts
browser-extension/src/popup/: Popup.tsx
cloud/: azure_integration.py  azure_test.py
config/: base.yml  development.yml  production.yml  settings.py
dashboard/: dashboard.py
database/: connection.py
deployment/: Dockerfile  alert.rules  azure-container-app.yaml  docker-compose.yml  entrypoint.sh  nginx.conf  prometheus.yml
docs/: api.md  architecture.md  conf.py  index.rst  setup.md
file_management/: __init__.py  file_ops.py  file_watcher.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/communication/: page.tsx
frontend/src/app/tasks/: page.tsx
frontend/src/components/: Layout.tsx  main-nav.tsx
frontend/src/components/Dashboard/: SystemMetrics.tsx  agent-status.tsx  overview.tsx  recent-tasks.tsx  system-metrics.tsx
frontend/src/lib/: websocket.ts
infrastructure/: deploy.ps1  main.bicep  main.json  main.parameters.json
jarvis_assistant/: __init__.py
jarvis_assistant/agents/: __init__.py  task_dag.py
knowledge/: knowledge_base.py
monitoring/: metrics.py
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: jarvis_alerts.yml
plugins/: plugin_manager.py
plugins/text_analysis/: metadata.yaml  plugin.py
processing/: batch.py
secrets/: .env  github_secrets.json
security/: __init__.py  auth.py  encryption.py
src/core/: portfolio_manager.py
src/monitoring/: alerting.py
system/: __init__.py  system_ops.py
tests/: conftest.py  test_admin_agent.py  test_core_components.py  test_deployment.py  test_file_watcher.py  test_language_executor.py  test_ml_executor.py  test_system.py  test_task_dag.py
utils/: cache.py  logging_utils.py
(+6 files in other folders)
