[tool.poetry]
name = "jarvis-assistant"
version = "0.1.0"
description = "AI-powered financial assistant platform"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.10.3"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
openai = "^1.12.0"
numpy = "^1.26.4"
scikit-learn = "^1.4.0"
websockets = "^12.0"
asyncpg = "^0.29.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
black = "^24.1.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
coverage = "^7.4.1"
pytest-cov = "^4.1.0"
bandit = "^1.7.6"
safety = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "-v --cov=src --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]
